[package]
name = "cidranger"
description = "Command-line utility to match an IP address against CIDR map"
version = "0.1.0"
edition = "2021"
authors = ["Ain Tohvri <ain@flashbit.net>"]
license = "GPL-3"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.2"

[dependencies]
validator = { version = "0.16", features = ["derive"] }
iprange = { version = "0.6" }
parser = { path = "parser" }
ipnet = { version = "2", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
